added photo with dog

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Main Content Section -->
     <main>
         <section class="hero-section">
-            <img src="profile-photo.jpg" alt="Ian with a dog" class="profile-photo">
+            <img src="ian_with_dog.png" alt="Ian with a dog" class="profile-photo">
             <div class="intro-text">
                 <h2>Welcome to my website</h2>
                 <p>Here you'll find some more about me, my CV, and a list of courses that I am taking (or have taken) at the University of Toronto.</p>
