--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Ian Zhang</h1>
         <nav class="navbar">
             <a href="#">Home</a>
-            <a href="#">About me</a>
+            <a href="about.html">About me</a>
             <a href="#">CV</a>
             <a href="#">Courses</a>
             <a href="#">Notes</a>
