added links to IG and linkedin

--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
         </section>
 
         <section class="location-map">
-            <img src="map.png" alt="Map of moves from Edmonton to Calgary to Toronto"> <!-- Add your map image here -->
+            <img src="move_map.png" alt="Map of moves from Edmonton to Calgary to Toronto"> <!-- Add your map image here -->
             <p>I moved from Edmonton to Calgary in 2018, then to Toronto for university in 2021.</p>
         </section>
 
         <section class="social-links">
-            <button onclick="window.location.href='https://www.instagram.com/yourusername'">Follow me on Instagram!</button>
-            <button onclick="window.location.href='https://www.linkedin.com/in/yourusername'">Connect with me on LinkedIn</button>
+            <button onclick="window.location.href='https://www.instagram.com/iaanzhang/'">Follow me on Instagram!</button>
+            <button onclick="window.location.href='https://www.linkedin.com/in/ian-zhang-ba2195195/'">Connect with me on LinkedIn</button>
         </section>
     </main>
 
