Various changes, added CV and improved other pages a little bit. updated the about me section and added a blank section on home page for photos and stuff to put there later

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <a href="#">Home</a>
             <a href="about.html">About me</a>
-            <a href="#">CV</a>
+            <a href="cv.html">CV</a>
             <a href="#">Courses</a>
             <a href="#">Notes</a>
             <a href="#"><img src="search-icon.png" alt="Search Icon" class="search-icon"></a>
@@ -28,10 +28,15 @@
             <img src="ian_with_dog.png" alt="Ian with a dog" class="profile-photo">
             <div class="intro-text">
                 <h2>Welcome to my website</h2>
-                <p>Here you'll find some more about me, my CV, and a list of courses that I am taking (or have taken) at the University of Toronto.</p>
+                <p>Here you'll find some more about me, my CV, and a list of my coursework during my time at the University of Toronto. I'm currently looking to go to graduate school in hopes of obtaining my PhD in biostatistics.</p>
             </div>
         </section>
-    </main>
+
+        <!-- White Space Section for Future Content -->
+        <section class="blank-space">
+            <!-- Placeholder for future images or content -->
+        </section>
+
 
     <!-- Footer Section -->
     <footer>
