--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             </div>
             <div class="about-text">
                 <h3>About me</h3>
-                <p>I’m a fourth year student studying applied mathematics/statistics in finance & economics at the University of Toronto. I love mathematics and statistics (of course) but when I'm not doing anything academic related, I enjoy playing games with my friends, cooking, and reading.</p>
+                <p>I’m a fourth year undergraduate student studying theoretical statistics and applied mathematics at the University of Toronto. I love what I study, apparently enough to want to pursue a PhD in statistics, which I'm currently applying for. When I'm not doing anything academia related (it gets <i>exhausting</i> at times...), I enjoy playing games with my friends, cooking, or working on a startup project with my good friend Arnav Nambiar. More information about my projects I've been working on, as well as my academic achievements and awards can be found on my <a href = "cv.html">CV</a> page. </p>
                 <p>Over the past year, I’ve had the wonderful opportunity to conduct research at the University of Alberta under the supervision of Professor Mike Kouritzin, for which I have received 2 NSERC USRA awards, in summer 2023 and summer 2024 respectively.</p>
             </div>
         </section>
