--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
     <main>
 
         <section class="cv-content">
-            <p>A pdf version of my CV is available <a href="CV.pdf" target="_blank">here</a>.</p>
+            <p>A pdf version of my CV is available <a href="C:\Users\ianzh\OneDrive\Desktop\CV\ian_CV.pdf" download>here</a>.</p>
 
             <h3>Education</h3>
             <p><strong>University of Toronto</strong> | Honours B.Sc in Statistics and Mathematical Applications in Statistics/Probability | Toronto ON</p>
@@ -40,15 +40,18 @@
                 <li>Helped to design and implement a model involving Hidden Markov Models with a GAN-like structure</li>
             </ul>
 
-            <h3>Technical Skills</h3>
-            <p><strong>Programming Languages:</strong> Python, Julia, R, SQL, Java, Matlab</p>
-            <p><strong>Tools/Frameworks:</strong> PyTorch, VS Code, JupyterHub, RStudio, GitHub</p>
-            <p><strong>Languages Spoken:</strong> English (native), Mandarin (native), Japanese (intermediate)</p>
-
             <h3>Publications</h3>
             <p><strong>In progress</strong></p>
             <p><em>Markov Processes for Enhanced Deepfake Generation and Detection</em> | 2024</p>
             <p>Bhadana, J., Kouritzin, M., Park, S., <strong>Zhang, I.</strong></p>
+
+            <h3>Projects</h3>
+            <p><strong>Pomodoro Clock with Deep-learning Implementations</strong></p>
+            <ul>
+                <li>Developed a clock following the Pomodoro technique that implements deep-learning, NLP, and generative AI to provide adaptive productive insights, integrated real-time tracking, and task categorization</li>
+                <li>Designed to help individuals keep on track and to minimize the amount of work required to plan tasks and budget time available</li>
+                <li>Tools used: PyTorch, scikit-learn</li>
+            </ul>
 
             <h3>Honours and Awards</h3>
             <p><strong>NSERC Undergraduate Student Research Award</strong> | Awarded by NSERC, UofA | May 2023, May 2024</p>
@@ -57,6 +60,11 @@
             <p>Awarded for academic excellence in the 2021-2022 school year</p>
             <p><strong>Dean's List Scholar</strong> | Awarded by Faculty of ArtsSci, UofT | Oct 2022, Jun 2023</p>
             <p>Awarded for academic excellence in the 2021-2022 and 2022-2023 school years.</p>
+
+            <h3>Technical Skills</h3>
+            <p><strong>Programming Languages:</strong> Python, Julia, R, SQL, Java, Matlab</p>
+            <p><strong>Tools/Frameworks:</strong> PyTorch, VS Code, JupyterHub, RStudio, GitHub</p>
+            <p><strong>Languages Spoken:</strong> English (native), Mandarin (native), Japanese (intermediate)</p>
         </section>
     </main>
 
