added course page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
         <div class="logo">IAN</div>
         <h1>Ian Zhang</h1>
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About me</a>
             <a href="cv.html">CV</a>
-            <a href="#">Courses</a>
-            <a href="#">Notes</a>
-            <a href="#"><img src="search-icon.png" alt="Search Icon" class="search-icon"></a>
+            <a href="courses.html">Courses</a>
+            <a href="notes.hsml">Notes</a>
         </nav>
     </header>
 
