--- a/cv.html
+++ b/cv.html
@@ -18,7 +18,6 @@
             <a href="cv.html" class="active">CV</a>
             <a href="courses.html">Courses</a>
             <a href="notes.html">Notes</a>
-            <a href="#"><img src="search-icon.png" alt="Search Icon" class="search-icon"></a>
         </nav>
     </header>
 
@@ -26,7 +25,8 @@
     <main>
 
         <section class="cv-content">
-            <p>A pdf version of my CV is available <a href="C:\Users\ianzh\OneDrive\Desktop\CV\ian_CV.pdf" download>here</a>.</p>
+            <p><strong>*Last updated November 2024</strong></p>
+            <p>A pdf version of my CV is available <a href="ian_CV.pdf" download>here</a>.</p>
 
             <h3>Education</h3>
             <p><strong>University of Toronto</strong> | Honours B.Sc in Statistics and Mathematical Applications in Statistics/Probability | Toronto ON</p>
