--- a/courses.html
+++ b/courses.html
@@ -22,75 +22,77 @@
     </header>
 
     <!-- Main Content Section -->
-    <main>
-        <section class="course-list">
-            <h2>Courses</h2>
-            <p>Here is a list of the courses I have taken during my time at UofT:</p>
+<!-- Main Content Section -->
+<main>
+    <section class="course-list">
+        <h2>Courses</h2>
+        <p>Here is a list of the courses I have taken during my time at UofT:</p>
 
-            <h3>First Year:</h3>
-            <ul>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat133y1">MAT133Y1: Calculus and Linear Algebra for Commerce</a></li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/eco101h1">ECO101H1: Principles of Microeconomics</a></li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/eco102h1">ECO102H1: Principles of Macroeconomics</a></li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/eas120y1">EAS120Y1: Modern Japanese I</a></li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat223h1">MAT223H1: Linear Algebra I (A+, 95%)</a></li>
-            </ul>
+        <h3>First Year:</h3>
+        <ul>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat133y1">MAT133Y1: Calculus and Linear Algebra for Commerce</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/eco101h1">ECO101H1: Principles of Microeconomics</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/eco102h1">ECO102H1: Principles of Macroeconomics</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/eas120y1">EAS120Y1: Modern Japanese I</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat223h1">MAT223H1: Linear Algebra I (A+, 95%)</a></li>
+        </ul>
 
-            <h3>First Year Summer:</h3>
-            <ul>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat137y1">MAT137Y1: Calculus with Proofs (A+, 97%)</a></li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat224h1">MAT224H1: Linear Algebra II (A+, 96%)</a></li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/psy100h1">PSY100H1: Introduction to Psychology (CR/NCR)</a></li>
-            </ul>
-            <h3>Second Year:</h3>
-            <ul>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat237y1"></a>MAT237Y1: Multivariable Calculus with Proofs (A+, 90%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat244h1"></a>MAT244H1: Introduction to Ordinary Differential Equations (A+, 99%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat246h1"></a>MAT246H1: Concepts in Abstract Mathematics</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/eco206y1"></a>ECO206Y1: Microeconomic Theory</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta257h1"></a>STA257H1: Probability and Statistics I (A+, 100%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta261h1"></a>STA261H1: Probability and Statistics II</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/csc108h1"></a>CSC108H1: Introduction to Computer Programming (A, 88%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/csc148h1"></a>CSC148H1: Introduction to Computer Science (A, 85%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/phl24h1"></a>PHL245H1: Modern Symbolic Logic (CR/NCR)</li>
-            </ul>
+        <h3>First Year Summer:</h3>
+        <ul>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat137y1">MAT137Y1: Calculus with Proofs (A+, 97%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat224h1">MAT224H1: Linear Algebra II (A+, 96%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/psy100h1">PSY100H1: Introduction to Psychology (CR/NCR)</a></li>
+        </ul>
 
-            <h3>Second Year Summer:</h3>
-            <ul>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/mat337h1"></a>MAT337H1: Introduction to Real Analysis</li>
-            </ul>
+        <h3>Second Year:</h3>
+        <ul>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat237y1">MAT237Y1: Multivariable Calculus with Proofs (A+, 90%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat244h1">MAT244H1: Introduction to Ordinary Differential Equations (A+, 99%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat246h1">MAT246H1: Concepts in Abstract Mathematics</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/eco206y1">ECO206Y1: Microeconomic Theory</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta257h1">STA257H1: Probability and Statistics I (A+, 100%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta261h1">STA261H1: Probability and Statistics II</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/csc108h1">CSC108H1: Introduction to Computer Programming (A, 88%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/csc148h1">CSC148H1: Introduction to Computer Science (A, 85%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/phl245h1">PHL245H1: Modern Symbolic Logic (CR/NCR)</a></li>
+        </ul>
 
-            <h3>Third Year (Tentative List):</h3>
-            <ul>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/apm346h1"></a>APM346H1: Partial Differential Equations (A, 87%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta302h1"></a>STA302H1: Methods of Data Analysis I (A, 86%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta303h1"></a>STA303H1: Methods of Data Analysis II (A+, 90%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta305h1"></a>STA305H1: Design and Analysis of Experiments (A, 87%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta347h1"></a>STA347H1: Probability</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta355h1"></a>STA355H1: Theory of Statistical Practice (A+, 90%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta437h1"></a>STA437H1: Methods for Multivariate Data</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta447h1"></a>STA447H1: Stochastic Processes (A+, 90%)</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/sta457h1"></a>STA457H1: Time Series Analysis</li>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/eco358h1"></a>ECO358H1: Financial Economics I</li>
-            </ul>
+        <h3>Second Year Summer:</h3>
+        <ul>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat337h1">MAT337H1: Introduction to Real Analysis</a></li>
+        </ul>
 
-            <h3>Fourth Year:</h3>
-            <ul>
-                <li><a href="https://artsci.calendar.utoronto.ca/course/eco375h1"></a>ECO375H1: Applied Econometrics I</li>
-                <li>MAT301H1: Groups and Symmetries</li>
-                <li>MAT334H1: Complex Variables</li>
-                <li>STA314H1: Statistical Methods for Machine Learning I</li>
-                <li>STA410H1: Statistical Computation</li>
-                <li>STA414H1: Statistical Methods for Machine Learning II</li>
-                <li>STA442H1: Methods of Applied Statistics</li>
-                <li>STA452H1: Mathematical Statistics I</li>
-                <li>STA453: Mathematical Statistics II</li>
-                <li>STA497H1: Seminar in Statistical Sciences</li>
-                <li>STA497H1Y: Readings in Statistics (advisor: Jun Young Park)</li>
-            </ul>
+        <h3>Third Year (Tentative List):</h3>
+        <ul>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/apm346h1">APM346H1: Partial Differential Equations (A, 87%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta302h1">STA302H1: Methods of Data Analysis I (A, 86%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta303h1">STA303H1: Methods of Data Analysis II (A+, 90%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta305h1">STA305H1: Design and Analysis of Experiments (A, 87%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta347h1">STA347H1: Probability</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta355h1">STA355H1: Theory of Statistical Practice (A+, 90%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta437h1">STA437H1: Methods for Multivariate Data</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta447h1">STA447H1: Stochastic Processes (A+, 90%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta457h1">STA457H1: Time Series Analysis</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/eco358h1">ECO358H1: Financial Economics I</a></li>
+        </ul>
 
-        </section>
-    </main>
+        <h3>Fourth Year:</h3>
+        <ul>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/eco375h1">ECO375H1: Applied Econometrics I</a></li>
+            <li>MAT301H1: Groups and Symmetries</li>
+            <li>MAT334H1: Complex Variables</li>
+            <li>STA314H1: Statistical Methods for Machine Learning I</li>
+            <li>STA410H1: Statistical Computation</li>
+            <li>STA414H1: Statistical Methods for Machine Learning II</li>
+            <li>STA442H1: Methods of Applied Statistics</li>
+            <li>STA452H1: Mathematical Statistics I</li>
+            <li>STA453: Mathematical Statistics II</li>
+            <li>STA497H1: Seminar in Statistical Sciences</li>
+            <li>STA497H1Y: Readings in Statistics (advisor: Jun Young Park)</li>
+        </ul>
+    </section>
+</main>
+
 
     <!-- Footer Section -->
     <footer>
