--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,8 @@
     <!-- Main Content Section -->
     <main>
 
-        <section class="cv-content">
+        <section class="cv-section">
+        <div class="cv-content">
             <p><strong>*Last updated November 2024</strong></p>
             <p>A pdf version of my CV is available <a href="ian_CV.pdf" download>here</a>.</p>
 
@@ -65,6 +66,7 @@
             <p><strong>Programming Languages:</strong> Python, Julia, R, SQL, Java, Matlab</p>
             <p><strong>Tools/Frameworks:</strong> PyTorch, VS Code, JupyterHub, RStudio, GitHub</p>
             <p><strong>Languages Spoken:</strong> English (native), Mandarin (native), Japanese (intermediate)</p>
+        </div>
         </section>
     </main>
 
