--- a/about.html
+++ b/about.html
@@ -24,14 +24,16 @@
     <!-- Main Content Section -->
     <main>
 
-        <section class="about-content">
-            <div class="profile-photo">
-                <img src="ian_about_me.png" alt="Me in New York!">
-            </div>
-            <div class="about-text">
-                <h3>About me</h3>
-                <p>I’m a fourth year undergraduate student studying theoretical statistics and applied mathematics at the University of Toronto. I love what I study, apparently enough to want to pursue a PhD in statistics, which I'm currently applying for. When I'm not doing anything academia related (it gets <i>exhausting</i> at times...), I enjoy playing games with my friends, cooking, or working on a startup project with my good friend Arnav Nambiar. More information about my projects I've been working on, as well as my academic achievements and awards can be found on my <a href = "cv.html">CV</a> page. </p>
-                <p>Over the past year, I’ve had the wonderful opportunity to conduct research at the University of Alberta under the supervision of Professor Mike Kouritzin, for which I have received 2 NSERC USRA awards, in summer 2023 and summer 2024 respectively.</p>
+        <section class="about-section">
+            <div class="about-content">
+                <div class="profile-photo">
+                    <img src="ian_about_me.png" alt="Me in New York!">
+                </div>
+                <div class="about-text">
+                    <h3>About me</h3>
+                    <p>I’m a fourth year undergraduate student studying theoretical statistics and applied mathematics at the University of Toronto. I love what I study, apparently enough to want to pursue a PhD in statistics, which I'm currently applying for. When I'm not doing anything academia related (it gets <i>exhausting</i> at times...), I enjoy playing games with my friends, cooking, or working on a startup project with my good friend Arnav Nambiar. More information about my projects I've been working on, as well as my academic achievements and awards can be found on my <a href = "cv.html">CV</a> page. </p>
+                    <p>Over the past year, I’ve had the wonderful opportunity to conduct research at the University of Alberta under the supervision of Professor Mike Kouritzin, for which I have received 2 NSERC USRA awards, in summer 2023 and summer 2024 respectively.</p>
+                </div>
             </div>
         </section>
 
