--- a/courses.html
+++ b/courses.html
@@ -24,6 +24,7 @@
     <!-- Main Content Section -->
 <!-- Main Content Section -->
 <main>
+    <div class="course-container">
     <section class="course-list">
         <h2>Courses</h2>
         <p>Here is a list of the courses I have taken during my time at UofT:</p>
@@ -79,18 +80,19 @@
         <h3>Fourth Year:</h3>
         <ul>
             <li><a href="https://artsci.calendar.utoronto.ca/course/eco375h1">ECO375H1: Applied Econometrics I</a></li>
-            <li>MAT301H1: Groups and Symmetries</li>
-            <li>MAT334H1: Complex Variables</li>
-            <li>STA314H1: Statistical Methods for Machine Learning I</li>
-            <li>STA410H1: Statistical Computation</li>
-            <li>STA414H1: Statistical Methods for Machine Learning II</li>
-            <li>STA442H1: Methods of Applied Statistics</li>
-            <li>STA452H1: Mathematical Statistics I</li>
-            <li>STA453: Mathematical Statistics II</li>
-            <li>STA497H1: Seminar in Statistical Sciences</li>
-            <li>STA497H1Y: Readings in Statistics (advisor: Jun Young Park)</li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat301h1">MAT301H1: Groups and Symmetries</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat334h1">MAT334H1: Complex Variables</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta314h1">STA314H1: Statistical Methods for Machine Learning I</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta410h1">STA410H1: Statistical Computation</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta414h1">STA414H1: Statistical Methods for Machine Learning II</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta442h1">STA442H1: Methods of Applied Statistics</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/stsa452h1">STA452H1: Mathematical Statistics I</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta453h1">STA453: Mathematical Statistics II</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta492h1">STA492H1: Seminar in Statistical Sciences</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta497h1">STA497H1Y: Readings in Statistics</a> (advisor: <a href="https://junjypark.github.io/">Jun Young Park</a>)</li>
         </ul>
     </section>
+    </div>
 </main>
 
 
