--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="about.html">About me</a>
             <a href="cv.html">CV</a>
             <a href="courses.html">Courses</a>
-            <a href="notes.hsml">Notes</a>
+            <a href="notes.html">Notes</a>
         </nav>
     </header>
 
