--- a/cv.html
+++ b/cv.html
@@ -10,15 +10,16 @@
 <body>
     <!-- Header Section -->
     <header class="header">
-        <div class="logo">IAN</div>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <a href="index.html">Home</a>
+                <a href="about.html">About me</a>
+                <a href="cv.html">CV</a>
+                <a href="courses.html">Courses</a>
+                <a href="notes.html">Notes</a>
+            </nav>
+        </div>
         <h1>Curriculum Vitae</h1>
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="about.html">About me</a>
-            <a href="cv.html" class="active">CV</a>
-            <a href="courses.html">Courses</a>
-            <a href="notes.html">Notes</a>
-        </nav>
     </header>
 
     <!-- Main Content Section -->
@@ -45,6 +46,7 @@
             <p><strong>In progress</strong></p>
             <p><em>Markov Processes for Enhanced Deepfake Generation and Detection</em> | 2024</p>
             <p>Bhadana, J., Kouritzin, M., Park, S., <strong>Zhang, I.</strong></p>
+            <a href="https://arxiv.org/abs/2411.07993">arXiv link</a> (2411.07993)
 
             <h3>Projects</h3>
             <p><strong>Pomodoro Clock with Deep-learning Implementations</strong></p>
