--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 <body>
     <!-- Header Section -->
     <header class="header">
-        <div class="logo">IAN</div>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <a href="index.html">Home</a>
+                <a href="about.html">About me</a>
+                <a href="cv.html">CV</a>
+                <a href="courses.html">Courses</a>
+                <a href="notes.html">Notes</a>
+            </nav>
+        </div>
         <h1>Ian Zhang</h1>
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="about.html">About me</a>
-            <a href="cv.html">CV</a>
-            <a href="courses.html">Courses</a>
-            <a href="notes.html">Notes</a>
-        </nav>
     </header>
+    
 
     <!-- Main Content Section -->
     <main>
