--- a/notes.html
+++ b/notes.html
@@ -10,20 +10,22 @@
 <body class="notes-page">
     <!-- Header Section -->
     <header class="header">
-        <div class="logo">IAN</div>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <a href="index.html">Home</a>
+                <a href="about.html">About me</a>
+                <a href="cv.html">CV</a>
+                <a href="courses.html">Courses</a>
+                <a href="notes.html">Notes</a>
+            </nav>
+        </div>
         <h1>Notes</h1>
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="about.html">About me</a>
-            <a href="cv.html">CV</a>
-            <a href="courses.html">Courses</a>
-            <a href="notes.html" class="active">Notes</a>
-        </nav>
     </header>
 
     <!-- Main Content Section -->
     <main>
-        <section class="notes-list">
+        <section class="notes-section">
+            <div class="notes-list">
             <h3>Year 3</h3>
             <ul>
                 <li><a href="notes/ECO358_Notes.pdf" target="_blank">ECO358 Notes</a></li>
@@ -50,6 +52,7 @@
                 <li><a href="notes/ECO101 study sheet.pdf" target="_blank">ECO101 Notes</a></li>
                 <li><a href="notes/MAT133_Guide-4.pdf" target="_blank">MAT133 Notes</a></li>
             </ul>
+            </div>
         </section>
     </main>
 
