--- a/about.html
+++ b/about.html
@@ -10,15 +10,16 @@
 <body>
     <!-- Header Section -->
     <header class="header">
-        <div class="logo">IAN</div>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <a href="index.html">Home</a>
+                <a href="about.html">About me</a>
+                <a href="cv.html">CV</a>
+                <a href="courses.html">Courses</a>
+                <a href="notes.html">Notes</a>
+            </nav>
+        </div>
         <h1>About me</h1>
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="about.html" class="active">About me</a>
-            <a href="cv.html">CV</a>
-            <a href="courses.html">Courses</a>
-            <a href="notes.html">Notes</a>
-        </nav>
     </header>
 
     <!-- Main Content Section -->
