--- a/courses.html
+++ b/courses.html
@@ -10,15 +10,16 @@
 <body class="courses-page">
     <!-- Header Section -->
     <header class="header">
-        <div class="logo">IAN</div>
-        <h1>Ian Zhang</h1>
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="about.html">About me</a>
-            <a href="cv.html">CV</a>
-            <a href="courses.html" class="active">Courses</a>
-            <a href="notes.html">Notes</a>
-        </nav>
+        <div class="navbar-container">
+            <nav class="navbar">
+                <a href="index.html">Home</a>
+                <a href="about.html">About me</a>
+                <a href="cv.html">CV</a>
+                <a href="courses.html">Courses</a>
+                <a href="notes.html">Notes</a>
+            </nav>
+        </div>
+        <h1>Course list</h1>
     </header>
 
     <!-- Main Content Section -->
