--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>About Me - Ian Zhang</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -43,15 +45,19 @@
             <p>I moved from Edmonton to Calgary in 2018, then to Toronto for university in 2021.</p>
         </section>
 
-        <section class="social-links">
-            <button onclick="window.location.href='https://www.instagram.com/iaanzhang/'">Follow me on Instagram!</button>
-            <button onclick="window.location.href='https://www.linkedin.com/in/ian-zhang-ba2195195/'">Connect with me on LinkedIn</button>
-        </section>
-    </main>
-
-    <!-- Footer Section -->
-    <footer>
-        <p>[ianz.zhang@mail.utoronto.ca] | University of Toronto | [780-909-2566]</p>
-    </footer>
+        <footer>
+            <p>
+                <a href="mailto:ianz.zhang@mail.utoronto.ca" target="_blank">
+                    <i class="fas fa-envelope"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/ian-zhang-ba2195195/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/IanZhang42" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://instagram.com/iaanzhang" target="_blank"><i class="fab fa-instagram"></i></a>
+            </p>
+        </footer>
 </body>
 </html>
