--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,8 @@
     <title>Curriculum Vitae - Ian Zhang</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -56,6 +58,13 @@
                 <li>Tools used: PyTorch, scikit-learn</li>
             </ul>
 
+            <p><strong>Personal Website (<a href="https://ianzhang42.github.io/">ianzhang42.github.io</a>)</strong></p>
+            <ul>
+                <li>Created a personal portfolio website to showcase my projects and my academic work</li>
+                <li>Website highlights my web development skills, Git version control, and responsive design practices</li>
+                <li>Tools used: HTML, CSS, GitHub Pages</li>
+            </ul>
+
             <h3>Honours and Awards</h3>
             <p><strong>NSERC Undergraduate Student Research Award</strong> | Awarded by NSERC, UofA | May 2023, May 2024</p>
             <p>Awarded to conduct research at the University of Alberta in the Department of Mathematical and Statistical sciences during the 2023 & 2024 Spring/Summer terms under the supervision of Dr. Mike Kouritzin</p>
@@ -66,15 +75,25 @@
 
             <h3>Technical Skills</h3>
             <p><strong>Programming Languages:</strong> Python, Julia, R, SQL, Java, Matlab</p>
-            <p><strong>Tools/Frameworks:</strong> PyTorch, VS Code, JupyterHub, RStudio, GitHub</p>
+            <p><strong>Tools/Frameworks:</strong> PyTorch, VS Code, JupyterHub, RStudio, GitHub, HTML, CSS</p>
             <p><strong>Languages Spoken:</strong> English (native), Mandarin (native), Japanese (intermediate)</p>
         </div>
         </section>
     </main>
 
-    <!-- Footer Section -->
     <footer>
-        <p>[ianz.zhang@mail.utoronto.ca] | University of Toronto | [780-909-2566]</p>
+        <p>
+            <a href="mailto:ianz.zhang@mail.utoronto.ca" target="_blank">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/ian-zhang-ba2195195/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/IanZhang42" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://instagram.com/iaanzhang" target="_blank"><i class="fab fa-instagram"></i></a>
+        </p>
     </footer>
 </body>
 </html>
