various stylistic changes, added announcements section

--- a/cv.html
+++ b/cv.html
@@ -55,7 +55,7 @@
             <ul>
                 <li>Developed a clock following the Pomodoro technique that implements deep-learning, NLP, and generative AI to provide adaptive productive insights, integrated real-time tracking, and task categorization</li>
                 <li>Designed to help individuals keep on track and to minimize the amount of work required to plan tasks and budget time available</li>
-                <li>Tools used: PyTorch, scikit-learn</li>
+                <li>Tools used: PyTorch, scikit-learn, scapy, tensorflow, huggingface</li>
             </ul>
 
             <p><strong>Personal Website (<a href="https://ianzhang42.github.io/">ianzhang42.github.io</a>)</strong></p>
