--- a/index.html
+++ b/index.html
@@ -28,16 +28,23 @@
     <!-- Main Content Section -->
     <main>
         <section class="hero-section">
+            <div class="hero-content">
             <img src="ian_with_dog.png" alt="Ian with a dog" class="profile-photo">
             <div class="intro-text">
                 <h2>Welcome to my website</h2>
-                <p>Here you'll find some more about me, my CV, and a list of my coursework during my time at the University of Toronto. I'm currently looking to go to graduate school in hopes of obtaining my PhD in biostatistics.</p>
+                <p>Here you'll find some more about me, my CV, and a list of my coursework during my time at the University of Toronto. I'm currently looking to go to graduate school in hopes of obtaining my PhD.</p>
+            </div>
             </div>
         </section>
 
-        <!-- White Space Section for Future Content -->
-        <section class="blank-space">
-            <!-- Placeholder for future images or content -->
+        <section class="announcement-section">
+            <h2>Announcements</h2>
+            <ul class="announcement-list">
+                <li><strong>November 12, 2024:</strong> My first paper is out there! Check it out <a href="https://arxiv.org/abs/2411.07993">here</a>.</li>
+                <li><strong>March 11, 2023:</strong> I just received the NSERC USRA for the second time! I'll be continuing my research under the supervision of Dr. Mike Kouritzin at the University of Alberta this summer.</li>
+                <li><strong>March 21, 2023:</strong> I just received the NSERC USRA. I'll be conducting research under the supervision of Dr. Mike Kouritzin at the University of Alberta this summer.</li>
+                <!-- Add more announcements as needed -->
+            </ul>
         </section>
 
 
