--- a/cv.html
+++ b/cv.html
@@ -45,7 +45,7 @@
             </ul>
 
             <h3>Publications</h3>
-            <p><strong>In progress</strong></p>
+            <p><strong>Preprints</strong></p>
             <p><em>Markov Processes for Enhanced Deepfake Generation and Detection</em> | 2024</p>
             <p>Bhadana, J., Kouritzin, M., Park, S., <strong>Zhang, I.</strong></p>
             <a href="https://arxiv.org/abs/2411.07993">arXiv link</a> (2411.07993)
