--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
 
         <section class="cv-section">
         <div class="cv-content">
-            <p><strong>*Last updated November 2024</strong></p>
+            <p><strong>*Last updated April 2025</strong></p>
             <p>A pdf version of my CV is available <a href="ian_CV.pdf" download>here</a>.</p>
 
             <h3>Education</h3>
@@ -45,10 +45,15 @@
             </ul>
 
             <h3>Publications</h3>
-            <p><strong>Preprints</strong></p>
-            <p><em>Markov Processes for Enhanced Deepfake Generation and Detection</em> | 2024</p>
+            <h2>Preprints</h2>
+            <p><strong>Markov Processes for Enhanced Deepfake Generation and Detection</strong> | 2024</p>
             <p>Bhadana, J., Kouritzin, M., Park, S., <strong>Zhang, I.</strong></p>
             <a href="https://arxiv.org/abs/2411.07993">arXiv link</a> (2411.07993)
+
+            <h3>Presentations</h3>
+            <h2>Upcoming</h2>
+            <p><strong>Markov Processes for Enhanced Deepfake Generation and Detection</strong> | May 2025</p>
+            <p>Accepted to the 2025 Annual SSC Meeting in Saskatoon.</p>
 
             <h3>Projects</h3>
             <p><strong>Pomodoro Clock with Deep-learning Implementations</strong></p>
