--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <section class="announcement-section">
             <h2>Announcements</h2>
             <ul class="announcement-list">
+                <li><strong>May 29, 2025:</strong> I just got back from my first conference! I presented my paper at the 2025 Annual SSC meeting in Saskatoon, and presented a poster about spatial autocorrelation tests at the 13th annual CSSC.</li>
                 <li><strong>November 12, 2024:</strong> My first paper is out there! Check it out <a href="https://arxiv.org/abs/2411.07993">here</a>.</li>
                 <li><strong>March 11, 2023:</strong> I just received the NSERC USRA for the second time! I'll be continuing my research under the supervision of Dr. Mike Kouritzin at the University of Alberta this summer.</li>
                 <li><strong>March 21, 2023:</strong> I just received the NSERC USRA. I'll be conducting research under the supervision of Dr. Mike Kouritzin at the University of Alberta this summer.</li>
