Updated CV webpage

--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
 
         <section class="cv-section">
         <div class="cv-content">
-            <p><strong>*Last updated April 2025</strong></p>
+            <p><strong>*Last updated May 2025</strong></p>
             <p>A pdf version of my CV is available <a href="ian_CV.pdf" download>here</a>.</p>
 
             <h3>Education</h3>
@@ -51,9 +51,12 @@
             <a href="https://arxiv.org/abs/2411.07993">arXiv link</a> (2411.07993)
 
             <h3>Presentations</h3>
-            <h2>Upcoming</h2>
-            <p><strong>Markov Processes for Enhanced Deepfake Generation and Detection</strong> | May 2025</p>
-            <p>Accepted to the 2025 Annual SSC Meeting in Saskatoon.</p>
+            <h2>Talks</h2>
+            <p>2025 SSC Annual Meeting in Saskatoon | 2025</p>
+            <p>3rd Joint SIAM/CAIMS Annual Meetings (scheduled) | 2025</p>
+            
+            <h2>Posters</h2>
+            <p>The Thirteenth Annual Canadian Statistics Student Conference | 2025</p>
 
             <h3>Projects</h3>
             <p><strong>Pomodoro Clock with Deep-learning Implementations</strong></p>
