Added masters degree to CV

--- a/cv.html
+++ b/cv.html
@@ -33,8 +33,11 @@
             <p>A pdf version of my CV is available <a href="ian_CV.pdf" download>here</a>.</p>
 
             <h3>Education</h3>
-            <p><strong>University of Toronto</strong> | Honours B.Sc in Statistics and Mathematical Applications in Statistics/Probability | Toronto ON</p>
-            <p>Sept 2021 - Present</p>
+            <p><strong>University of Toronto</strong> | MSc in Statistics | Toronto ON</p>
+            <p>Sept 2025 - Apr 2026</p>
+
+            <p><strong>University of Toronto</strong> | Honours BSc in Statistics (with high distinction) | Toronto ON</p>
+            <p>Sept 2021 - Apr 2025</p>
 
             <h3>Experience</h3>
             <p><strong>University of Alberta | Research Assistant | Edmonton, AB</strong> | May 2023 - Aug 2023</p>
