Updated most webpages; removed about me page and integrated that with the home page, updated CV, course list

--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
                 </div>
                 <div class="about-text">
                     <h3>About me</h3>
-                    <p>I’m a fourth year undergraduate student studying theoretical statistics and applied mathematics at the University of Toronto. I love what I study, apparently enough to want to pursue a PhD in statistics, which I'm currently applying for. When I'm not doing anything academia related (it gets <i>exhausting</i> at times...), I enjoy playing games with my friends, cooking, or working on a startup project with my good friend Arnav Nambiar. More information about my projects I've been working on, as well as my academic achievements and awards can be found on my <a href = "cv.html">CV</a> page. </p>
-                    <p>Over the past year, I’ve had the wonderful opportunity to conduct research at the University of Alberta under the supervision of Professor Mike Kouritzin, for which I have received 2 NSERC USRA awards, in summer 2023 and summer 2024 respectively.</p>
+                    <p>I'm a graduate student at the University of Toronto, currently working towards my masters in statistics, which I expect to obtain in 2026. I recently received my BSc in statistics and mathematics from UofT. </p>
+                    <p>My research interests lie in the more applied realm of statistics, currently focusing in genetics and neuroimaging. I am currently working with the Xia Lab at McGill University to extend and optimized the mGWASR package in R, which provides functions to conduct metabolite GWAS studies, as well as a curated database of significant SNP-metabolite associations. As of now, I am implementing IV selection and updating the package to match current syntax and standards.</p>
                 </div>
             </div>
         </section>
