--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,6 @@
         <div class="navbar-container">
             <nav class="navbar">
                 <a href="index.html">Home</a>
-                <a href="about.html">About me</a>
                 <a href="cv.html">CV</a>
                 <a href="courses.html">Courses</a>
                 <a href="notes.html">Notes</a>
@@ -29,28 +28,26 @@
 
         <section class="cv-section">
         <div class="cv-content">
-            <p><strong>*Last updated May 2025</strong></p>
+            <p><strong>*Last updated June 2025</strong></p>
             <p>A pdf version of my CV is available <a href="ian_CV.pdf" download>here</a>.</p>
 
             <h3>Education</h3>
-            <p><strong>University of Toronto</strong> | MSc in Statistics | Toronto ON</p>
-            <p>Sept 2025 - Apr 2026</p>
+            <p><strong>MSc in Statistics</strong> | University of Toronto | 2026</p>
 
-            <p><strong>University of Toronto</strong> | Honours BSc in Statistics (with high distinction) | Toronto ON</p>
-            <p>Sept 2021 - Apr 2025</p>
+            <p><strong>Honours BSc in Statistics/Mathematics</strong> | University of Toronto | 2025</p>
+            <p><u>Advisor:</u> <a href = "https://junjypark.github.io/">Jun Young Park</a></p>
 
             <h3>Experience</h3>
-            <p><strong>University of Alberta | Research Assistant | Edmonton, AB</strong> | May 2023 - Aug 2023</p>
-            <ul>
-                <li>Awarded 2 NSERC USRAs (one in 2023 and the other in 2024)</li>
-                <li>Researched deep fake simulation/detection methods</li>
-                <li>Helped to design and implement a model involving Hidden Markov Models with a GAN-like structure</li>
-            </ul>
+            <p><strong>Summer Research Trainee</strong> | McGill University | 2025</p>
+            <p>Supervisor: <a href = "https://www.xialab.ca/">Jianguo (Jeff) Xia</a></p>
+            <p><strong>Research Assistant</strong> | University of Alberta | 2023-2024</p>
+            <p>Supervisor: <a href = "https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html">Mike Kouritzin</a></p>
 
             <h3>Publications</h3>
-            <h2>Preprints</h2>
+            <p><small>* = Corresponding author</small></p>
+            <h2>Under Review</h2>
             <p><strong>Markov Processes for Enhanced Deepfake Generation and Detection</strong> | 2024</p>
-            <p>Bhadana, J., Kouritzin, M., Park, S., <strong>Zhang, I.</strong></p>
+            <p>Mike A. Kouritzin, <strong>Ian Zhang*</strong>, Bhadana Jyoti, Seoyeon Park</p>
             <a href="https://arxiv.org/abs/2411.07993">arXiv link</a> (2411.07993)
 
             <h3>Presentations</h3>
@@ -61,33 +58,19 @@
             <h2>Posters</h2>
             <p>The Thirteenth Annual Canadian Statistics Student Conference | 2025</p>
 
-            <h3>Projects</h3>
-            <p><strong>Pomodoro Clock with Deep-learning Implementations</strong></p>
-            <ul>
-                <li>Developed a clock following the Pomodoro technique that implements deep-learning, NLP, and generative AI to provide adaptive productive insights, integrated real-time tracking, and task categorization</li>
-                <li>Designed to help individuals keep on track and to minimize the amount of work required to plan tasks and budget time available</li>
-                <li>Tools used: PyTorch, scikit-learn, scapy, tensorflow, huggingface</li>
-            </ul>
-
-            <p><strong>Personal Website (<a href="https://ianzhang42.github.io/">ianzhang42.github.io</a>)</strong></p>
-            <ul>
-                <li>Created a personal portfolio website to showcase my projects and my academic work</li>
-                <li>Website highlights my web development skills, Git version control, and responsive design practices</li>
-                <li>Tools used: HTML, CSS, GitHub Pages</li>
-            </ul>
-
             <h3>Honours and Awards</h3>
-            <p><strong>NSERC Undergraduate Student Research Award</strong> | Awarded by NSERC, UofA | May 2023, May 2024</p>
-            <p>Awarded to conduct research at the University of Alberta in the Department of Mathematical and Statistical sciences during the 2023 & 2024 Spring/Summer terms under the supervision of Dr. Mike Kouritzin</p>
-            <p><strong>Jack Zwaigenbaum Scholarship</strong> | Awarded by University College, UofT | Sept 2022</p>
-            <p>Awarded for academic excellence in the 2021-2022 school year</p>
-            <p><strong>Dean's List Scholar</strong> | Awarded by Faculty of ArtsSci, UofT | Oct 2022, Jun 2023</p>
-            <p>Awarded for academic excellence in the 2021-2022 and 2022-2023 school years.</p>
+            <p>Anna & Alex Beverly Memorial Fellowship | 2025</p>
+            <p>NSERC Undergraduate Student Research Award (x2) | 2023, 2024 </p>
+            <p>Jack Zwaigenbaum Scholarship | 2022</p>
+            <p> Dean's List Scholar | 2022, 2023, 2024, 2025 </p>
 
-            <h3>Technical Skills</h3>
-            <p><strong>Programming Languages:</strong> Python, Julia, R, SQL, Java, Matlab</p>
-            <p><strong>Tools/Frameworks:</strong> PyTorch, VS Code, JupyterHub, RStudio, GitHub, HTML, CSS</p>
+            <h3>Services</h3>
+            <h2> Conferences </h2>
+            <p> Session co-chair, 2025 Third Joint SIAM/CAIMS Annual Meetings (scheduled) </p>
+
+            <h3>Other</h3>
             <p><strong>Languages Spoken:</strong> English (native), Mandarin (native), Japanese (intermediate)</p>
+            <p><strong>Memberships:</strong> Statistical Society of Canada</p>
         </div>
         </section>
     </main>
