--- a/courses.html
+++ b/courses.html
@@ -15,7 +15,6 @@
         <div class="navbar-container">
             <nav class="navbar">
                 <a href="index.html">Home</a>
-                <a href="about.html">About me</a>
                 <a href="cv.html">CV</a>
                 <a href="courses.html">Courses</a>
                 <a href="notes.html">Notes</a>
@@ -31,56 +30,55 @@
     <section class="course-list">
         <h2>Courses</h2>
         <p>Here is a list of the courses I have taken during my time at UofT:</p>
-
-        <h3>First Year:</h3>
+        <h3>First Year Undergraduate:</h3>
         <ul>
             <li><a href="https://artsci.calendar.utoronto.ca/course/mat133y1">MAT133Y1: Calculus and Linear Algebra for Commerce</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/eco101h1">ECO101H1: Principles of Microeconomics</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/eco102h1">ECO102H1: Principles of Macroeconomics</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/eas120y1">EAS120Y1: Modern Japanese I</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/mat223h1">MAT223H1: Linear Algebra I (A+, 95%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat223h1">MAT223H1: Linear Algebra I</a></li>
         </ul>
 
-        <h3>First Year Summer:</h3>
+        <h3>First Year Summer Undergraduate:</h3>
         <ul>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/mat137y1">MAT137Y1: Calculus with Proofs (A+, 97%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/mat224h1">MAT224H1: Linear Algebra II (A+, 96%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/psy100h1">PSY100H1: Introduction to Psychology (CR/NCR)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat137y1">MAT137Y1: Calculus with Proofs</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat224h1">MAT224H1: Linear Algebra II </a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/psy100h1">PSY100H1: Introduction to Psychology </a></li>
         </ul>
 
-        <h3>Second Year:</h3>
+        <h3>Second Year Undergraduate:</h3>
         <ul>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/mat237y1">MAT237Y1: Multivariable Calculus with Proofs (A+, 90%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/mat244h1">MAT244H1: Introduction to Ordinary Differential Equations (A+, 99%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat237y1">MAT237Y1: Multivariable Calculus with Proofs</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/mat244h1">MAT244H1: Introduction to Ordinary Differential Equations </a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/mat246h1">MAT246H1: Concepts in Abstract Mathematics</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/eco206y1">ECO206Y1: Microeconomic Theory</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/sta257h1">STA257H1: Probability and Statistics I (A+, 100%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta257h1">STA257H1: Probability and Statistics I </a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/sta261h1">STA261H1: Probability and Statistics II</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/csc108h1">CSC108H1: Introduction to Computer Programming (A, 88%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/csc148h1">CSC148H1: Introduction to Computer Science (A, 85%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/phl245h1">PHL245H1: Modern Symbolic Logic (CR/NCR)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/csc108h1">CSC108H1: Introduction to Computer Programming </a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/csc148h1">CSC148H1: Introduction to Computer Science</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/phl245h1">PHL245H1: Modern Symbolic Logic</a></li>
         </ul>
 
-        <h3>Second Year Summer:</h3>
+        <h3>Second Year Summer Undergraduate:</h3>
         <ul>
             <li><a href="https://artsci.calendar.utoronto.ca/course/mat337h1">MAT337H1: Introduction to Real Analysis</a></li>
         </ul>
 
-        <h3>Third Year (Tentative List):</h3>
+        <h3>Third Year Undergraduate:</h3>
         <ul>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/apm346h1">APM346H1: Partial Differential Equations (A, 87%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/sta302h1">STA302H1: Methods of Data Analysis I (A, 86%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/sta303h1">STA303H1: Methods of Data Analysis II (A+, 90%)</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/sta305h1">STA305H1: Design and Analysis of Experiments (A, 87%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/apm346h1">APM346H1: Partial Differential Equations</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta302h1">STA302H1: Methods of Data Analysis I</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta303h1">STA303H1: Methods of Data Analysis II </a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta305h1">STA305H1: Design and Analysis of Experiments</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/sta347h1">STA347H1: Probability</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/sta355h1">STA355H1: Theory of Statistical Practice (A+, 90%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta355h1">STA355H1: Theory of Statistical Practice</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/sta437h1">STA437H1: Methods for Multivariate Data</a></li>
-            <li><a href="https://artsci.calendar.utoronto.ca/course/sta447h1">STA447H1: Stochastic Processes (A+, 90%)</a></li>
+            <li><a href="https://artsci.calendar.utoronto.ca/course/sta447h1">STA447H1: Stochastic Processes</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/sta457h1">STA457H1: Time Series Analysis</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/eco358h1">ECO358H1: Financial Economics I</a></li>
         </ul>
 
-        <h3>Fourth Year:</h3>
+        <h3>Fourth Year Undergraduate:</h3>
         <ul>
             <li><a href="https://artsci.calendar.utoronto.ca/course/eco375h1">ECO375H1: Applied Econometrics I</a></li>
             <li><a href="https://artsci.calendar.utoronto.ca/course/mat301h1">MAT301H1: Groups and Symmetries</a></li>
