--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <div class="navbar-container">
             <nav class="navbar">
                 <a href="index.html">Home</a>
-                <a href="about.html">About me</a>
                 <a href="cv.html">CV</a>
                 <a href="courses.html">Courses</a>
                 <a href="notes.html">Notes</a>
@@ -29,10 +28,11 @@
     <main>
         <section class="hero-section">
             <div class="hero-content">
-            <img src="ian_with_dog.png" alt="Ian with a dog" class="profile-photo">
+            <img src="ian_about_me.png" alt="Me in New York!" class="profile-photo">
             <div class="intro-text">
                 <h2>Welcome to my website</h2>
-                <p>Here you'll find some more about me, my CV, and a list of my coursework during my time at the University of Toronto. I'm currently looking to go to graduate school in hopes of obtaining my PhD.</p>
+                <p>I'm a graduate student at the University of Toronto, currently working towards my masters in statistics, which I expect to obtain in 2026. I recently received my BSc in statistics and mathematics from UofT. </p>
+                <p>My research interests lie in the more applied realm of statistics, currently focusing in genetics and neuroimaging. I am currently working with the Xia Lab at McGill University to extend and optimized the mGWASR package in R, which provides functions to conduct metabolite GWAS studies, as well as a curated database of significant SNP-metabolite associations. As of now, I am implementing IV selection and updating the package to match current syntax and standards.</p>
             </div>
             </div>
         </section>
@@ -40,7 +40,10 @@
         <section class="announcement-section">
             <h2>Announcements</h2>
             <ul class="announcement-list">
+                <li><strong>June 19, 2025:</strong> I just graduated with my honours BSc in statistics and mathematics with high distinction.</li>
+                <li><strong>June 6, 2025:</strong> I'm very grateful to have just received the Anna & Alex Beverly Memorial Fellowship from University College at UofT. Thanks for the support! I'll continue to work hard and try my best during my graduate studies.</li>
                 <li><strong>May 29, 2025:</strong> I just got back from my first conference! I presented my paper at the 2025 Annual SSC meeting in Saskatoon, and presented a poster about spatial autocorrelation tests at the 13th annual CSSC.</li>
+                <li><strong>February 28, 2025:</strong> I've accepted my offer to continue at UofT to do my masters in statistics. Here's to another year!</li>
                 <li><strong>November 12, 2024:</strong> My first paper is out there! Check it out <a href="https://arxiv.org/abs/2411.07993">here</a>.</li>
                 <li><strong>March 11, 2023:</strong> I just received the NSERC USRA for the second time! I'll be continuing my research under the supervision of Dr. Mike Kouritzin at the University of Alberta this summer.</li>
                 <li><strong>March 21, 2023:</strong> I just received the NSERC USRA. I'll be conducting research under the supervision of Dr. Mike Kouritzin at the University of Alberta this summer.</li>
