--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
 
         <section class="cv-section">
         <div class="cv-content">
-            <p><strong>*Last updated June 2025</strong></p>
+            <p><strong>*Last updated September 2025</strong></p>
             <p>A pdf version of my CV is available <a href="ian_CV.pdf" download>here</a>.</p>
 
             <h3>Education</h3>
@@ -37,11 +37,6 @@
             <p><strong>Honours BSc in Statistics/Mathematics</strong> | University of Toronto | 2025</p>
             <p><u>Advisor:</u> <a href = "https://junjypark.github.io/">Jun Young Park</a></p>
 
-            <h3>Experience</h3>
-            <p><strong>Summer Research Trainee</strong> | McGill University | 2025</p>
-            <p>Supervisor: <a href = "https://www.xialab.ca/">Jianguo (Jeff) Xia</a></p>
-            <p><strong>Research Assistant</strong> | University of Alberta | 2023-2024</p>
-            <p>Supervisor: <a href = "https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html">Mike Kouritzin</a></p>
 
             <h3>Publications</h3>
             <p><small>* = Corresponding author</small></p>
@@ -49,6 +44,18 @@
             <p><strong>Markov Processes for Enhanced Deepfake Generation and Detection</strong> | 2024</p>
             <p>Mike A. Kouritzin, <strong>Ian Zhang*</strong>, Bhadana Jyoti, Seoyeon Park</p>
             <a href="https://arxiv.org/abs/2411.07993">arXiv link</a> (2411.07993)
+
+            <h3>Experience</h3>
+            <p><strong>Summer Research Trainee</strong> | McGill University | 2025</p>
+            <p>Supervisor: <a href = "https://www.xialab.ca/">Jianguo (Jeff) Xia</a></p>
+            <p><strong>Research Assistant</strong> | University of Alberta | 2023-2024</p>
+            <p>Supervisor: <a href = "https://www.math.ualberta.ca/~mkouritz/Kouritzin_M.html">Mike Kouritzin</a></p>
+
+            <h3>Teaching</h3>
+            <h2>Teaching Assistant</h2>
+            <p><strong>MAT137: Calculus with Proofs</strong> | Fall 2025 & Winter 2026</p>
+            <p><strong>STA302: Methods of Data Analyis I</strong> | Fall 2025</p>
+            <p><strong>STA437: Methods of Multivariate Data</strong> | Winter 2026</p>
 
             <h3>Presentations</h3>
             <h2>Talks</h2>
@@ -66,7 +73,7 @@
 
             <h3>Services</h3>
             <h2> Conferences </h2>
-            <p> Session co-chair, 2025 Third Joint SIAM/CAIMS Annual Meetings (scheduled) </p>
+            <p> Chair, 2025 Third Joint SIAM/CAIMS Annual Meetings (scheduled) </p>
 
             <h3>Other</h3>
             <p><strong>Languages Spoken:</strong> English (native), Mandarin (native), Japanese (intermediate)</p>
