--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
             <h3>Presentations</h3>
             <h2>Talks</h2>
             <p>2025 SSC Annual Meeting in Saskatoon | 2025</p>
-            <p>3rd Joint SIAM/CAIMS Annual Meetings (scheduled) | 2025</p>
+            <p>3rd Joint SIAM/CAIMS Annual Meetings | 2025</p>
             
             <h2>Posters</h2>
             <p>The Thirteenth Annual Canadian Statistics Student Conference | 2025</p>
@@ -73,7 +73,7 @@
 
             <h3>Services</h3>
             <h2> Conferences </h2>
-            <p> Chair, 2025 Third Joint SIAM/CAIMS Annual Meetings (scheduled) </p>
+            <p> Chair, 2025 Third Joint SIAM/CAIMS Annual Meetings </p>
 
             <h3>Other</h3>
             <p><strong>Languages Spoken:</strong> English (native), Mandarin (native), Japanese (intermediate)</p>
